Small fix on mobile menu

--- a/src/theme/site/extras/header.less
+++ b/src/theme/site/extras/header.less
@@ -7,6 +7,7 @@
     align-items: center;
 
     .logo {
+      display: flex;
       margin: 10px 0;
     }
   }
@@ -121,7 +122,6 @@
     align-items: initial;
 
     .logo-nav-wrapper {
-      align-items: initial;
       justify-content: space-between;
     }
   }
@@ -229,6 +229,11 @@ body:not(.view-editview) {
   max-width: 100vw;
   height: 70px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+
+  > .ui.container,
+  .logo-nav-wrapper {
+    height: 100%;
+  }
 }
 
 @media only screen and (max-width: 768px) {
